--- a/RS_VapourTraining/app/src/main/res/layout/fragment_home.xml
+++ b/RS_VapourTraining/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="255dp">
+            android:layout_height="match_parent">
 
 
             <ImageView
@@ -59,8 +59,8 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/materialCardView"
-                android:layout_width="130dp"
-                android:layout_height="70dp"
+                android:layout_width="125dp"
+                android:layout_height="64dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/color4"
@@ -132,8 +132,8 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/materialCardView2"
-                android:layout_width="130dp"
-                android:layout_height="70dp"
+                android:layout_width="124dp"
+                android:layout_height="64dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 app:cardBackgroundColor="@color/color4"
@@ -210,9 +210,9 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
             android:layout_gravity="center"
-            android:text="Games Owned:" />
+            android:text="Games Owned:"
+            android:textSize="25sp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
